@@ -145,13 +145,17 @@ struct c_command {
 /**
  * Kind of gibberish to print.  The gibberish printed varies slightly depending
  * on the kind.
+ *
+ * A given gibberish may only be a single kind and _not_ be a bitwise-or of
+ * kinds.  However, a bitwise-or of kinds may be used to test whether a given
+ * gibberish is any _one_ of those kinds.
  */
 enum c_gib_kind {
-  C_GIB_NONE,                           ///< Not gibberish (hence, English).
-  C_GIB_DECL,                           ///< Gibberish is a declaration.
-  C_GIB_CAST,                           ///< Gibberish is a cast.
-  C_GIB_TYPEDEF,                        ///< Gibberish is a `typedef`.
-  C_GIB_USING                           ///< Gibberish is a `using`.
+  C_GIB_NONE    = 0,                    ///< Not gibberish (hence, English).
+  C_GIB_DECL    = (1u << 0),            ///< Gibberish is a declaration.
+  C_GIB_CAST    = (1u << 1),            ///< Gibberish is a cast.
+  C_GIB_TYPEDEF = (1u << 2),            ///< Gibberish is a `typedef`.
+  C_GIB_USING   = (1u << 3)             ///< Gibberish is a `using`.
 };
 
 /**
