@@ -1,0 +1,1 @@
+using CPF = void(*const)(const char *const);
