@@ -1,0 +1,1 @@
+using CPI = int *const;
