@@ -1,0 +1,1 @@
+using CPMSI = int S::*const;
