@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ typedef int *const CPI; show using @ 0
