@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ typedef int S::*const CPMSI; show CPMSI using @ 0
